--- a/implement/teletext-decoder.qsf
+++ b/implement/teletext-decoder.qsf
@@ -78,12 +78,19 @@ set_location_assignment PIN_K2 -to RX_IN
 set_location_assignment PIN_K5 -to FRAME_VALID_OUT
 set_location_assignment PIN_L4 -to SERIAL_CLOCK_OUT
 set_location_assignment PIN_K1 -to SERIAL_DATA_OUT
-set_global_assignment -name SDC_FILE "teletext-decoder.sdc"
-set_global_assignment -name VHDL_FILE txt_top_level.vhd
-set_global_assignment -name VHDL_FILE ../src/rtl/TXT_DATA_RECOVERY.vhd
 set_global_assignment -name NUM_PARALLEL_PROCESSORS "all"
 set_location_assignment PIN_L2 -to CLK_REPEATER
 set_location_assignment PIN_J15 -to RESETn
 set_location_assignment PIN_L14 -to CLK_REPEATER2
 set_location_assignment PIN_K15 -to RESET_REPEATER
+set_global_assignment -name SDC_FILE "teletext-decoder.sdc"
+set_global_assignment -name VHDL_FILE ../src/rtl/VGA.vhd
+set_global_assignment -name VHDL_FILE txt_top_level.vhd
+set_global_assignment -name VHDL_FILE ../src/rtl/TXT_DATA_RECOVERY.vhd
+set_location_assignment PIN_M15 -to CLK_25
+set_location_assignment PIN_J1 -to R_OUT
+set_location_assignment PIN_G1 -to B_OUT
+set_location_assignment PIN_J2 -to G_OUT
+set_location_assignment PIN_G2 -to HSYNC_OUT
+set_location_assignment PIN_D1 -to VSYNC_OUT
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
