--- a/implement/teletext-decoder.qsf
+++ b/implement/teletext-decoder.qsf
@@ -91,7 +91,9 @@ set_location_assignment PIN_G2 -to HSYNC_OUT
 set_location_assignment PIN_D1 -to VSYNC_OUT
 set_global_assignment -name SDC_FILE "teletext-decoder.sdc"
 set_global_assignment -name VHDL_FILE ../src/rtl/CGROM.vhd
+set_global_assignment -name VHDL_FILE ../src/rtl/DISPLAY_GENERATOR.vhd
 set_global_assignment -name VHDL_FILE ../src/rtl/VGA.vhd
 set_global_assignment -name VHDL_FILE txt_top_level.vhd
 set_global_assignment -name VHDL_FILE ../src/rtl/TXT_DATA_RECOVERY.vhd
+set_global_assignment -name QIP_FILE ../src/rtl/dpr_ip_variation.qip
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
