--- a/implement/teletext-decoder.qsf
+++ b/implement/teletext-decoder.qsf
@@ -102,4 +102,10 @@ set_global_assignment -name QIP_FILE ../src/rtl/dpr_ip_variation.qip
 set_global_assignment -name VHDL_FILE ../src/rtl/DISPLAY_GENERATOR.vhd
 set_global_assignment -name VHDL_FILE ../src/rtl/VGA.vhd
 set_global_assignment -name VHDL_FILE txt_top_level.vhd
+set_location_assignment PIN_C11 -to PAGE_DOWN
+set_location_assignment PIN_D9 -to PAGE_UP
+set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to PAGE_DOWN
+set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to PAGE_UP
+set_location_assignment PIN_F14 -to REVEAL_IN
+set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to REVEAL_IN
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
