--- a/implement/teletext-decoder.qsf
+++ b/implement/teletext-decoder.qsf
@@ -108,4 +108,5 @@ set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to PAGE_DOWN
 set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to PAGE_UP
 set_location_assignment PIN_F14 -to REVEAL_IN
 set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to REVEAL_IN
+set_location_assignment PIN_E15 -to MIX_IN
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
