--- a/implement/teletext-decoder.qsf
+++ b/implement/teletext-decoder.qsf
@@ -83,7 +83,6 @@ set_location_assignment PIN_L2 -to CLK_REPEATER
 set_location_assignment PIN_J15 -to RESETn
 set_location_assignment PIN_L14 -to CLK_REPEATER2
 set_location_assignment PIN_K15 -to RESET_REPEATER
-set_location_assignment PIN_M15 -to CLK_25
 set_location_assignment PIN_J1 -to R_OUT
 set_location_assignment PIN_G1 -to B_OUT
 set_location_assignment PIN_J2 -to G_OUT
@@ -109,4 +108,5 @@ set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to PAGE_UP
 set_location_assignment PIN_F14 -to REVEAL_IN
 set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to REVEAL_IN
 set_location_assignment PIN_E15 -to MIX_IN
+set_location_assignment PIN_M15 -to CLK_VIDEO
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
