--- a/implement/teletext-decoder.qsf
+++ b/implement/teletext-decoder.qsf
@@ -189,6 +189,8 @@ set_global_assignment -name FLOW_ENABLE_POWER_ANALYZER ON
 set_global_assignment -name POWER_DEFAULT_INPUT_IO_TOGGLE_RATE "12.5 %"
 set_location_assignment PIN_54 -to LED_OUT
 set_instance_assignment -name IO_STANDARD "2.5 V" -to LED_OUT
+set_global_assignment -name ENABLE_SIGNALTAP OFF
+set_global_assignment -name USE_SIGNALTAP_FILE stp1.stp
 set_global_assignment -name SDC_FILE "teletext-decoder.sdc"
 set_global_assignment -name VHDL_FILE ../src/rtl/si5351.vhd
 set_global_assignment -name VHDL_FILE ../src/rtl/TXT_DATA_RECOVERY.vhd
@@ -197,6 +199,7 @@ set_global_assignment -name VHDL_FILE ../src/rtl/ODD_PARITY_DECODER.vhd
 set_global_assignment -name VHDL_FILE ../src/rtl/HAMMING2418_DECODER.vhd
 set_global_assignment -name VHDL_FILE ../src/rtl/HAMMING84_DECODER.vhd
 set_global_assignment -name VHDL_FILE ../src/rtl/TXT_DATA_PROCESSOR.vhd
+set_global_assignment -name VHDL_FILE ../src/rtl/KEYPAD.vhd
 set_global_assignment -name VHDL_FILE ../src/rtl/TXT_MEMORY_CONTROLLER.vhd
 set_global_assignment -name VHDL_FILE ../src/rtl/CGROM.vhd
 set_global_assignment -name QIP_FILE ../src/rtl/dpr_ip_variation.qip
@@ -208,7 +211,5 @@ set_global_assignment -name VERILOG_FILE ../src/rtl/HDMI.v -library work
 set_global_assignment -name VERILOG_FILE ../src/rtl/intosc/synthesis/submodules/altera_int_osc.v
 set_global_assignment -name VHDL_FILE ../src/rtl/intosc/synthesis/intosc.vhd
 set_global_assignment -name VHDL_FILE txt_top_level.vhd
-set_global_assignment -name ENABLE_SIGNALTAP OFF
-set_global_assignment -name USE_SIGNALTAP_FILE stp1.stp
 set_global_assignment -name SIGNALTAP_FILE stp1.stp
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
