--- a/implement/teletext-decoder.qsf
+++ b/implement/teletext-decoder.qsf
@@ -204,12 +204,11 @@ set_global_assignment -name VHDL_FILE ../src/rtl/TXT_MEMORY_CONTROLLER.vhd
 set_global_assignment -name VHDL_FILE ../src/rtl/CGROM.vhd
 set_global_assignment -name QIP_FILE ../src/rtl/dpr_ip_variation.qip
 set_global_assignment -name VHDL_FILE ../src/rtl/DISPLAY_GENERATOR.vhd
-set_global_assignment -name VHDL_FILE ../src/rtl/VGA.vhd
+set_global_assignment -name VERILOG_FILE ../src/rtl/TMDS_encoder.v
+set_global_assignment -name VHDL_FILE ../src/rtl/HDMI.vhd
 set_global_assignment -name QIP_FILE ../src/rtl/obuf.qip
 set_global_assignment -name QIP_FILE ../src/rtl/pll.qip
-set_global_assignment -name VERILOG_FILE ../src/rtl/HDMI.v -library work
 set_global_assignment -name VERILOG_FILE ../src/rtl/intosc/synthesis/submodules/altera_int_osc.v
 set_global_assignment -name VHDL_FILE ../src/rtl/intosc/synthesis/intosc.vhd
 set_global_assignment -name VHDL_FILE txt_top_level.vhd
-set_global_assignment -name SIGNALTAP_FILE stp1.stp
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
