--- a/implement/teletext-decoder.qsf
+++ b/implement/teletext-decoder.qsf
@@ -155,27 +155,20 @@ set_location_assignment PIN_66 -to KEYPAD_ROWS[2]
 set_location_assignment PIN_65 -to KEYPAD_ROWS[3]
 set_location_assignment PIN_64 -to KEYPAD_ROWS[4]
 set_location_assignment PIN_62 -to KEYPAD_ROWS[5]
-set_location_assignment PIN_60 -to KEYPAD_COLS[0]
-set_location_assignment PIN_59 -to KEYPAD_COLS[1]
-set_location_assignment PIN_58 -to KEYPAD_COLS[2]
-set_location_assignment PIN_57 -to KEYPAD_COLS[3]
-set_location_assignment PIN_56 -to KEYPAD_COLS[4]
-set_location_assignment PIN_55 -to KEYPAD_COLS[5]
+set_location_assignment PIN_58 -to KEYPAD_COLS[0]
+set_location_assignment PIN_57 -to KEYPAD_COLS[1]
+set_location_assignment PIN_56 -to KEYPAD_COLS[2]
+set_location_assignment PIN_55 -to KEYPAD_COLS[3]
 set_location_assignment PIN_28 -to RESETn
-set_instance_assignment -name IO_STANDARD "2.5 V" -to KEYPAD_COLS[5]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to KEYPAD_COLS[4]
 set_instance_assignment -name IO_STANDARD "2.5 V" -to KEYPAD_COLS[3]
 set_instance_assignment -name IO_STANDARD "2.5 V" -to KEYPAD_COLS[2]
 set_instance_assignment -name IO_STANDARD "2.5 V" -to KEYPAD_COLS[1]
 set_instance_assignment -name IO_STANDARD "2.5 V" -to KEYPAD_COLS[0]
 set_instance_assignment -name IO_STANDARD "2.5 V" -to KEYPAD_COLS
-set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to KEYPAD_COLS[5]
-set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to KEYPAD_COLS[4]
 set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to KEYPAD_COLS[3]
 set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to KEYPAD_COLS[2]
 set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to KEYPAD_COLS[1]
 set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to KEYPAD_COLS[0]
-set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to KEYPAD_COLS
 set_global_assignment -name IOBANK_VCCIO 2.5V -section_id 4
 set_instance_assignment -name IO_STANDARD "2.5 V" -to KEYPAD_ROWS[5]
 set_instance_assignment -name IO_STANDARD "2.5 V" -to KEYPAD_ROWS[4]
@@ -211,4 +204,7 @@ set_global_assignment -name QIP_FILE ../src/rtl/pll.qip
 set_global_assignment -name VERILOG_FILE ../src/rtl/intosc/synthesis/submodules/altera_int_osc.v
 set_global_assignment -name VHDL_FILE ../src/rtl/intosc/synthesis/intosc.vhd
 set_global_assignment -name VHDL_FILE txt_top_level.vhd
+set_location_assignment PIN_61 -to KEYPAD_ROWS[6]
+set_location_assignment PIN_60 -to KEYPAD_ROWS[7]
+set_location_assignment PIN_59 -to KEYPAD_ROWS[8]
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
