--- a/implement/teletext-decoder.qsf
+++ b/implement/teletext-decoder.qsf
@@ -180,8 +180,6 @@ set_instance_assignment -name IO_STANDARD "2.5 V" -to KEYPAD_ROWS
 set_global_assignment -name PROJECT_IP_REGENERATION_POLICY ALWAYS_REGENERATE_IP
 set_global_assignment -name FLOW_ENABLE_POWER_ANALYZER ON
 set_global_assignment -name POWER_DEFAULT_INPUT_IO_TOGGLE_RATE "12.5 %"
-set_location_assignment PIN_54 -to LED_OUT
-set_instance_assignment -name IO_STANDARD "2.5 V" -to LED_OUT
 set_global_assignment -name ENABLE_SIGNALTAP OFF
 set_global_assignment -name USE_SIGNALTAP_FILE stp1.stp
 set_global_assignment -name SDC_FILE "teletext-decoder.sdc"
@@ -207,4 +205,8 @@ set_global_assignment -name VHDL_FILE txt_top_level.vhd
 set_location_assignment PIN_61 -to KEYPAD_ROWS[6]
 set_location_assignment PIN_60 -to KEYPAD_ROWS[7]
 set_location_assignment PIN_59 -to KEYPAD_ROWS[8]
+set_location_assignment PIN_52 -to LED_D16_OUT
+set_instance_assignment -name IO_STANDARD "2.5 V" -to LED_D16_OUT
+set_location_assignment PIN_54 -to LED_D2_OUT
+set_instance_assignment -name IO_STANDARD "2.5 V" -to LED_D2_OUT
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
